--- a/SportyShoes/src/main/resources/application.properties
+++ b/SportyShoes/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mywork
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
 #auto create tables fromspring boot 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
